exports[`(.not).toHaveRequestTooLongStatus > using axios > .not.toHaveRequestTooLongStatus > fails when response have status code 413 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveRequestTooLongStatus()</intensity>

Expected status code to not be 413 received:
  <red>413</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 413,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveRequestTooLongStatus > using axios > .toHaveRequestTooLongStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveRequestTooLongStatus()</intensity>

Expected status code to be 413 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;
